@@ -11,12 +11,13 @@ import { FooterComponent as BaseComponent } from '../../../../app/footer/footer.
 
 @Component({
   selector: 'ds-themed-footer',
-  // styleUrls: ['./footer.component.scss'],
-  styleUrls: ['../../../../app/footer/footer.component.scss'],
-  // templateUrl: './footer.component.html'
-  templateUrl: '../../../../app/footer/footer.component.html',
+  styleUrls: ['./footer.component.scss'],
+  //styleUrls: ['../../../../app/footer/footer.component.scss'],
+  templateUrl: './footer.component.html',
+  //templateUrl: '../../../../app/footer/footer.component.html',
   standalone: true,
   imports: [NgIf, RouterLink, AsyncPipe, DatePipe, TranslateModule],
 })
 export class FooterComponent extends BaseComponent {
+  showTopFooter = true;
 }
