@@ -1,3 +1,3 @@
 <div class="container">
-  <a href="https://www.omikk.bme.hu/rolunk/konyvtari-szabalyzatok/adatvedelem" target="_blank">Adatvédelmi tájékoztatónk</a>
+  <a href="https://nje.hu/adatkezelesi-nyilatkozat" target="_blank">Adatvédelmi tájékoztatónk</a>
 </div>
