@@ -6,7 +6,7 @@
   //--ds-header-icon-color: #{$link-color};
   //--ds-header-icon-color-hover: #{darken($link-color, 15%)};
   --netta-jumbotron-bg: #{$yellow};
-  --ds-breadcrumb-bg: #{darken($yellow, 15%)} !important;
+  --ds-breadcrumb-bg: #{$yellow} !important;
   --ds-breadcrumb-link-color: #{darken($gray-100, 15%)} !important;
-  --ds-breadcrumb-link-active-color: #{darken($gray-100, 50%)} !important;
+  --ds-breadcrumb-link-active-color: #{darken($gray-100, 90%)} !important;
 }
